crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/check_stdin_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --stdin-file-path file.astro
```

# Input messages

```block
---
import {a as a} from 'mod';
import {    something } from "file.astro";
debugger;
something ( ) ;
var foo: string = "";
---
<div></div>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
---
import {a as a} from 'mod';
import {    something } from "file.astro";
debugger;
something ( ) ;
var foo: string = "";
---
<div></div>
```

```block
file.astro:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some imports or exports are not organized.
  
    1 │ ---
  > 2 │ import {a as a} from 'mod';
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  > 3 │ import {    something } from "file.astro";
  > 4 │ debugger;
      │ ^^^^^^^^^
    5 │ something ( ) ;
    6 │ var foo: string = "";
  
  i Sort these imports.
  
    1 │ ---
  > 2 │ import {a as a} from 'mod';
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  > 3 │ import {    something } from "file.astro";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    4 │ debugger;
    5 │ something ( ) ;
  
  i This statement must be preceded by a blank line. Add a newline before this statement.
  
    2 │ import {a as a} from 'mod';
    3 │ import {    something } from "file.astro";
  > 4 │ debugger;
      │ ^^^^^^^^^
    5 │ something ( ) ;
    6 │ var foo: string = "";
  
  i Safe fix: Organize imports and exports (Biome)
  
    1 1 │   
    2   │ - import·{a·as·a}·from·'mod';
    3   │ - import·{····something·}·from·"file.astro";
      2 │ + import·{····something·}·from·"file.astro";
      3 │ + import·{a·as·a}·from·'mod';
      4 │ + 
    4 5 │   debugger;
    5 6 │   something ( ) ;
  

```

```block
file.astro:2:9 lint/complexity/noUselessRename  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Useless rename.
  
    1 │ ---
  > 2 │ import {a as a} from 'mod';
      │         ^^^^^^
    3 │ import {    something } from "file.astro";
    4 │ debugger;
  
  i Safe fix: Remove the renaming.
  
    2 │ import·{a·as·a}·from·'mod';
      │          -----             

```

```block
file.astro:4:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    2 │ import {a as a} from 'mod';
    3 │ import {    something } from "file.astro";
  > 4 │ debugger;
      │ ^^^^^^^^^
    5 │ something ( ) ;
    6 │ var foo: string = "";
  
  i Unsafe fix: Remove debugger statement
  
    2 2 │   import {a as a} from 'mod';
    3 3 │   import {    something } from "file.astro";
    4   │ - debugger;
    5 4 │   something ( ) ;
    6 5 │   var foo: string = "";
  

```

```block
file.astro:2:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ ---
  > 2 │ import {a as a} from 'mod';
      │        ^^^^^^^^
    3 │ import {    something } from "file.astro";
    4 │ debugger;
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1   │ - 
    2   │ - import·{a·as·a}·from·'mod';
      1 │ + 
    3 2 │   import {    something } from "file.astro";
    4 3 │   debugger;
  

```

```block
file.astro:6:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
    4 │ debugger;
    5 │ something ( ) ;
  > 6 │ var foo: string = "";
      │     ^^^
    7 │ ---
    8 │ <div></div>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    4 4 │   debugger;
    5 5 │   something ( ) ;
    6   │ - var·foo:·string·=·"";
      6 │ + var·_foo:·string·=·"";
    7 7 │   
  

```
