crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/check_stdin_write_unsafe_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe --stdin-file-path file.astro
```

# Input messages

```block
---
import {a as a} from 'mod';
import {    something } from "file.astro";
debugger;
something ( ) ;
var foo: string = "";
---
<div></div>
```

# Emitted Messages

```block
---
import { something } from "file.astro";

something();
var _foo: string = "";
---
<div></div>
```
