crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/does_not_throw_parse_error_for_return.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.astro
```

## `file.astro`

```astro
---
const foo = true;
if (foo) {
    return "Something";
}

---
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
