crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/embedded_bindings_are_tracked_correctly.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
import { Component } from "./component.svelte";
let hello = "Hello World";
let array = [];
let props = [];
let dynamicId = "main";
let dynamicClass = "container";
---

<html>
    <span>{hello}</span>
    <span>{notDefined}</span>
    { array.map(item => (<span>{item}</span>)) }
    <Component />
    <input {...props}>
    <div id={dynamicId} class={dynamicClass}></div>
</html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
